# kodilla-django-final-project

./: .replit  README.md  db.sqlite3  pyproject.toml  requirements.txt
books/: admin.py  api_views.py  models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_rename_post_book.py
books/templates/books/: author_details.html  authors_list.html  book_details.html  books_list.html
books/tests/: test_forms.py  test_views.py
greetings/: urls.py  views.py
greetings/tests/: test_urls.py  test_views.py
infos/: urls.py  views.py
infos/templates/infos/: home.html
maths/: admin.py  forms.py  models.py  urls.py  views.py
maths/fixtures/: math.json  result.json
maths/migrations/: 0001_initial.py  0002_alter_math_operation.py  0003_alter_math_options.py
maths/templates/maths/: details.html  home.html  list.html  operation.html  results.html
maths/tests/: test_model.py  test_views.py
posts/: admin.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_tag_post_tags.py  0003_alter_post_tags.py
posts/templates/posts/: author_details.html  authors_list.html  home.html  post_details.html  post_list.html  posts_list.html
posts/tests/: test_model.py  test_urls.py
static/maths/css/: style.css
templates/: main.html
templates/registration/: login.html
testing/: api.py  settings.py  urls.py  wsgi.py
