[tool.poetry]
name = "repl_nix_kodilla-django-final-project"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
dj-static = "0.0.6"
Django = "4.2"
django-bootstrap-breadcrumbs = "0.9.2"
django-bootstrap5 = "23.1"
django-grappelli = "3.0.6"
djangorestframework = "3.14.0"
Pillow = "9.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
